translating the entire main page into arabic, except for header and navbar

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -24,5 +24,104 @@
         "job": "مطور واجهة المستخدم",
         "pcontent": "لوريم ايبسوم دولور سيت أميت، كونسيكتيتور أديبايسينغ إيليت. إيد إفينيت إكسبليكابو سيميليكوي سولوتا إللو نومكوام سوسيبيت فيريتاتيس، كواس لاودانتيوم توتام دولوروم نيسيسيتاتيبوس إن كو إكسيرسيتاسيونيم أولام. فولوبتاتيم كونسيكونتور ديكتا سيد إياوي، سابينتي مايوريس نون فيسيليس فيرو إررور، تيمبوريبوس كويرات، أكيساموس أنيمي كويديم؟ كوبيديتاتيه كوربوريس إكس فيرو.",
         "button": "اقرأ المزيد"
+    },
+
+    "services": {
+        "our": "خدماتـ",
+        "services": "نا",
+        "webdevelopment": "تطوير الويب",
+        "graphicdesign": "تصميم جرافيك",
+        "digitalmarketing": "التسويق الرقمي",
+        "pcontent1": "نص عشوائي باللغة العربية",
+        "pcontent2": "نص عشوائي باللغة العربية",
+        "pcontent3": "نص عشوائي باللغة العربية",
+        "button": "اقرأ المزيد"
+    },
+    "portfolio": {
+        "latest": "آخر",
+        "projects": "مشروع",
+        "box1": {
+            "title": "شركة مينت مايند للقهوة",
+            "pcontent": ".واجهة موقع مستنسخة من موقع شركة ستاربكس للقهوة",
+            "github": "جيت هاب",
+            "livedemo": "عرض مباشر",
+            "githubtitle": "عرض المشروع على جيت هاب",
+            "livedemotitle": "عرض مباشر"
+        },
+        "box2": {
+            "title": "قريبًا",
+            "pcontent": "نص عشوائي باللغة العربية"
+        },
+        "box3": {
+            "title": "قريبًا",
+            "pcontent": "نص عشوائي باللغة العربية"
+        },
+        "box4": {
+            "title": "قريبًا",
+            "pcontent": "نص عشوائي باللغة العربية"
+        },
+        "box5": {
+            "title": "قريبًا",
+            "pcontent": "نص عشوائي باللغة العربية"
+        },
+        "box6": {
+            "title": "قريبًا",
+            "pcontent": "نص عشوائي باللغة العربية"
+        }
+    },
+    "skills": {
+        "skills": "المهارات و",
+        "experience": "الخبرة",
+        "box1": {
+            "experience": "وظيفة رقم 1",
+            "company": "الشركة",
+            "pcontent": "نص عشوائي باللغة العربية",
+            "year": "٢٠٢٣"
+        },
+        "box2": {
+            "experience": "وظيفة رقم 2",
+            "company": "الشركة",
+            "pcontent": "نص عشوائي باللغة العربية",
+            "year": "٢٠٢٢"
+        },
+        "myskills": {
+            "html": "HTML5",
+            "css": "CSS3",
+            "javascript": "Javascript",
+            "git": "Git",
+            "github": "Github",
+            "react": "ReactJS",
+            "redux": "Redux",
+            "tailwindcss": "Tailwind CSS",
+            "nodejs": "NodeJS",
+            "mongodb": "MongoDB",
+            "express": "Express",
+            "python": "Python"
+        }
+    },
+
+    "contact": {
+        "contact": "تواصل",
+        "me": "معي",
+        "fullname": "الاسم الكامل",
+        "emailaddress": "عنوان البريد الإلكتروني",
+        "mobilenumber": "رقم الجوال",
+        "subject": "موضوع البريد الإلكتروني",
+        "yourmessage": "اكتب رسالتك هنا",
+        "button": "إرسال",
+        "fullnametitle": "أدخل اسمك الكامل",
+        "emailaddresstitle": "أدخل بريدك الإلكتروني هنا",
+        "mobilenumbertitle": "أدخل رقم هاتفك الجوال هنا",
+        "subjecttitle": "أدخل موضوع هذه الرسالة",
+        "yourmessagetitle": "اكتب رسالتك هنا",
+        "buttontitle": "أرسل رسالتك"
+    },
+
+    "footer": {
+        "copyright": "جميع الحقوق محفوظة",
+        "by": "بواسطة",
+        "myname": "مصطفى صالح",
+        "title": "قم بزيارة ملفي الشخصي على لينكد ان"
     }
+    
 }
