translating navbar and header

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -1,4 +1,23 @@
 {
+    "navbar": {
+        "home": "الرئيسية",
+        "about": "حول",
+        "blog": "المدونة",
+        "projects": "المشاريع",
+        "cv": "السيرة الذاتية",
+        "githubstats": "حالات جيت هاب",
+        "cvresume": "السيرة الذاتية"
+    },
+
+    "header": {
+        "home": "الرئيسية",
+        "about": "حول",
+        "services": "الخدمات",
+        "portfolio": "معرض المشاريع",
+        "skills": "المهارات و الخبرات",
+        "contact": "تواصل معي"
+    },
+
     "home": {
         "greeting": "مرحباً، هذا أنا",
         "myname": "مصطفى صالح",
