--- a/src/languages/locale/arabic/blog.json
+++ b/src/languages/locale/arabic/blog.json
@@ -1,11 +1,22 @@
 {
-    "home": {
-        "greeting": "مرحباً، هذا أنا",
-        "myname": "مصطفى صالح",
-        "andima": "وأعمل كـ",
-        "spancontent1": "مهندس برمجيات",
-        "spancontent2": "مطور واجهات المواقع",
-        "spancontent3": "مطور ريأكت",
-        "pcontent": "أنا مطور برمجيات متحمس لإنشاء التكنولوجيا لرفع مستوى الأشخاص ومساعدة المطورين الجدد على إيجاد المسار الصحيح. بعض التقنيات التي أستمتع بالعمل معها تشمل جافاسكربت وريأكت."
+    "myblog": {
+        "my": "مدونـ",
+        "blog": "تي"
+    },
+    
+    "post": {
+    "readmore": "اقرأ المزيد"
+    },
+
+    "post1": {
+    "title": "مقالة",
+    "date": "١٠ اغسطس ٢٠٢٢",
+    "content": "لوريم إيبسوم، وهو نص شكلي استخدم في صناعة الطباعة والتنضيد. كان لوريم إيبسوم هو النص المعياري للصناعة منذ القرن الخامس عشر عندما قامت طابعة غير معروفة بأخذ قطعة من النص وترتيبها لتكوّن كتابًا من نوع العينات. لقد نجا ليس فقط خمسة قرون ولكن أيضًا القفزة إلى صناعة الطباعة الإلكترونية ، وبقاءها دون تغيير كبير في هذه الفترةلوريم إيبسوم، وهو نص شكلي استخدم في صناعة الطباعة والتنضيد. كان لوريم إيبسوم هو النص المعياري للصناعة منذ القرن الخامس عشر عندما قامت طابعة غير معروفة بأخذ قطعة من النص وترتيبها لتكوّن كتابًا من نوع العينات. لقد نجا ليس فقط خمسة قرون ولكن أيضًا القفزة إلى صناعة الطباعة الإلكترونية ، وبقاءها دون تغيير كبير في هذه الفترة."
+    },
+
+    "post2": {
+    "title": "مقالة",
+    "date": "١٠ اغسطس ٢٠٢٢",
+    "content": "لوريم إيبسوم، وهو نص شكلي استخدم في صناعة الطباعة والتنضيد. كان لوريم إيبسوم هو النص المعياري للصناعة منذ القرن الخامس عشر عندما قامت طابعة غير معروفة بأخذ قطعة من النص وترتيبها لتكوّن كتابًا من نوع العينات. لقد نجا ليس فقط خمسة قرون ولكن أيضًا القفزة إلى صناعة الطباعة الإلكترونية ، وبقاءها دون تغيير كبير في هذه الفترةلوريم إيبسوم، وهو نص شكلي استخدم في صناعة الطباعة والتنضيد. كان لوريم إيبسوم هو النص المعياري للصناعة منذ القرن الخامس عشر عندما قامت طابعة غير معروفة بأخذ قطعة من النص وترتيبها لتكوّن كتابًا من نوع العينات. لقد نجا ليس فقط خمسة قرون ولكن أيضًا القفزة إلى صناعة الطباعة الإلكترونية ، وبقاءها دون تغيير كبير في هذه الفترة."
     }
 }
