creating the projects path and adding some projects, but still i want to make the grid two columns and bigger gaps. And adding another section for another type of projects.

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -5,7 +5,7 @@
         "blog": "المدونة",
         "projects": "المشاريع",
         "cv": "السيرة الذاتية",
-        "githubstats": "حالات جيت هاب",
+        "githubstats": "حالاتي",
         "cvresume": "السيرة الذاتية"
     },
 
