--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -5,7 +5,7 @@
         "blog": "Blog",
         "projects": "Projects",
         "cv": "CV",
-        "githubstats": "Github Stats",
+        "githubstats": "My Stats",
         "cvresume": "CV, Resume"
 
     },
