--- a/src/languages/locale/german/home.json
+++ b/src/languages/locale/german/home.json
@@ -5,7 +5,7 @@
         "blog": "Blog",
         "projects": "Projekte",
         "cv": "Lebenslauf",
-        "githubstats": "GitHub-Statistiken",
+        "githubstats": "Meine Statistiken",
         "cvresume": "Lebenslauf, Resume"
         },
         
