--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -5,7 +5,7 @@
         "blog": "Блог",
         "projects": "Проекты",
         "cv": "Резюме",
-        "githubstats": "Статистика GitHub",
+        "githubstats": "Mоя Cтатистика",
         "cvresume": "Резюме"
         },
 
